fix: viewport height issue on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -69,3 +69,16 @@
     --radius: 0.5rem;
   }
 }
+
+@layer base {
+  html {
+    -webkit-text-size-adjust: 100%;
+    -ms-overflow-style: -ms-autohiding-scrollbar;
+  }
+
+  html,
+  body {
+    width: 100%;
+    height: 100%;
+  }
+}
